--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.7",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.1",
     "framer-motion": "^10.16.2",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
