--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI= mongodb+srv://mani:ahmad0704@cluster0.9ydbrzr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://mani:ahmad0704@cluster0.9ydbrzr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# REMOVE or COMMENT THIS:
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
